--- a/index.html
+++ b/index.html
@@ -1,58 +1,169 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Yang Gao's Homepage</title>
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Gaoyangvr.GitHub.io by gaoyangVR</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Yang Gao  (高阳)</h1>
+        <h4>Ph.D. candidate<br/>
+          SKL. VR Technology and Systems<br/>
+          <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a><br/>
+          gaoyang2963@163.com</h4>
+        <p>
+          <img src="./images/photo.jpg" style="width:215px;height:301px;">
+        </p>
 
-    <header>
-      <div class="container">
-        <h1>Gaoyangvr.GitHub.io</h1>
-        <h2>My online website</h2>
+      </header>
+      <section>
 
-        <section id="downloads">
-          <a href="https://github.com/gaoyangVR" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao(郝爱民)<a> and Prof. Shuai Li (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<table>
+  <tr>
+    <th width="90px">2014 - Now</th>
+    <td>
+      <b>Ph.D. candidate</b> in Computer Science</br>
+      Beihang University, China</br>
+      Advisors: Prof. Aimin Hao, Prof. Shuai Li and Prof. Hong Qin
+    </td>
+  </tr>
+  <tr>
+    <th>2008 - 2012</th>
+    <td>
+      <b>B.S. Eng.</b> in Computer Science and Engineering</br>
+      North China University of Water Resource and Electric Power, China</br>
+      GPA ranking: top 10% out of 150 students
+    </td>
+  </tr>
+   <tr>
+    <th>2012 - 2014</th>
+    <td>
+      <b>M.S. Eng.</b> in Computer Science and Engineering</br>
+       North China University of Water Resource and Electric Power, China</br> 
+       <b>Visiting Scholar</b> at State Key Laboratory of Virtual Reality Technology and Systems, Beihang University
+    </td>
+  </tr>
+</table>
+
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="publications" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications and Presentations</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+  <li>
+
+    <b>A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</b>
+    <a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf"><strong>PDF</strong></a></br>
+    <u>Yang Gao</u>, Shuai Li, Hong Qin and Aimin Hao</br>
+    Proceedings of the Computer Graphics International Conference (CGI), 2017</br>
+    <table>
+    <tr>
+    <th><img src="./images/CGI2017.jpg" style="width:300px;height:140px;"></th>
+    <td>
+    <b>Abstract:</b>Physically-based fluid animation and solid deformation driven by numerical simulation have manifested their significance for many graphics applications during the past two decades. For example, the fluid implicit particle (FLIP) method and shape matching technique based on position based dynamics (PBD) have demonstrated their unique graphics strength in fluid and solid animation, respectively. We propose a novel integrated approach supporting the seamless unification of FLIP and shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid-solid interaction and solid melting. The key innovation of this paper is a unified Lagrangian framework that seamlessly blends FLIP and PBD based shape matching constraint towards the natural yet strong coupling between fluid and deformable solid. Within our integrated framework, it enables many complicated fluid-solid phenomena with ease. We conduct various kinds of experiments. All the results demonstrate the advantages of our unified hybrid approach towards visual fidelity, efficiency, stability, and versatility.
+    </td>
+    </tr>
+    </table>
+  </li>
+
+  <li>
+    <b>Oral presentation at Computer Graphics International 2017 (Yokohama, Japan)</br></b>
+    <i>"A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods"</i>
+  </li>
+</ul>
+<h3>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="service" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Service to University</h3>
+<table>
+  <tr>
+    <th width="90px">2014.09 - 2015.01</th>
+    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure</i> at Beihang University</td>
+    <th width="90px">2015.09 - 2016.01</th>
+    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure</i> at Beihang University</td>
+    <th width="90px">2016.09 - 2017.01</th>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language</i> at Beihang University</td>
+  </tr>
+</table>
+<h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<a id="awards" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards and  Invention Patent </h3>
+<table>
+  <tr>
+    <th width="90px"> Authorized</th>
+    <td>2016.<i>基于格子Boltzmann的流体可视化仿真方法(First student inventor)</i></td>
+    <td><i>2017.一种基于欧拉-拉格朗日耦合方法的流体仿真方法(First student inventor)</i></td>
+  </tr>
+  <tr>
+    <th>Substantive Examination</th>
+    <td>2015.<i>一种基于离散格子Boltzmann双分布模型的热流体仿真方法(First student inventor)</i></td>
+    <td>2015.<i>一种基于FLIP与Shape matching混合模型的不可融多相流仿真方法(First student inventor)</i></td>
+  </tr>
+  </table>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="skills" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<table>
+  <tr>
+    <th width="90px">Programming</th>
+    <td>
+      Proficient in C/C++ with CUDA</br>
+      Familiar with Python, OpenGL and Matlab
+      </td>
+  </tr>
+  <tr>
+    <th>Rendering</th>
+    <td>Blender with Maya (MentalRay), POV-Ray and Blender</td>
+  </tr>
+  <tr>
+    <th>Language</th>
+    <td>
+      Chinese: native</br>
+      English: fluent, CET-6 score: 478
+    </td>
+  </tr>
+</table>
+
+<h3>
+<a id="colleagues" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Colleagues</h3>
+
+<table>
+  <tr>
+    <th width="90px"><a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Hong Qin</a></th>
+    <td>
+      Full Professor (with tenure) at Stony Brook University
+      </td>
+  </tr>
+  <tr>
+    <th><a href="http://hsiatsing.github.io/" class="user-mention">Qing Xia</a></th>
+    <td>Ph.D. candidate at Beihang University</td>
+  </tr>
+</table>
+
+<p></p>
       </section>
-    </div>
 
+      <footer>
+        <p><small>Hosted on GitHub Pages</small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
