--- a/index.html
+++ b/index.html
@@ -1,247 +1,194 @@
-body {
-  margin: 0;
-  padding: 0;
-  background: #151515 url("../images/bkg.png") 0 0;
-  color: #eaeaea;
-  font: 16px;
-  line-height: 1.5;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-}
 
-/* General & 'Reset' Stuff */
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=2, maximum-scale=2">
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-.container {
-  width: 90%;
-  max-width: 1280px;
-  margin: 0 auto;
-}
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-section {
-  display: block;
-  margin: 0 0 20px 0;
-}
+    <title>Yang Gao's homepage</title>
+  </head>
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 20px;
-}
+  <body class="layout-center has-menu" alog-page-type="6">
+    <div id="body" class="container">
+  <table>
+  <tr>
+    <th>
+      <p>
+          <img src="./images/photo.jpg" style="width:215px;height:301px;">
+       </p>
+    </th>
+    <td>
+       <div class="inner">
+     
+        <h1>Yang Gao  (高阳)</h1>
+        <h4>Ph.D. candidate<br/>
+          SKL. VR Technology and Systems<br/>
+          <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a><br/>
+          gaoyang2963@163.com</h4>
+     
+      <section>
+    </td>
+  </tr>
+</table>>
 
-li {
-  line-height: 1.4 ;
-}
+ 
+      <p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and Prof. Shuai Li (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics.</p>
+  
 
-/* Header, <header>
-   header   - container
-   h1       - project name
-   h2       - project description
-*/
+<h3>
+<a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 
-header {
-  background: rgba(0.3, 0, 0, 0.5);
-  width: 100%;
-  border-bottom: 1px dashed #b5e853;
-  padding: 20px 0;
-  margin: 0 0 40px 0;
-}
+<table>
+  <tr>
+    <th width="90px">2014 - Now</th>
+    <td>
+      <b>Ph.D. candidate</b> in Computer Science</br>
+      Beihang University, China</br>
+      Advisors: Prof. Aimin Hao, Prof. Shuai Li and Prof. Hong Qin
+    </td>
+  </tr>
+    <tr>
+    <th>2012 - 2014</th>
+    <td>
+      <b>M.S. Eng.</b> in Computer Science and Engineering (recommended for admission to a program without exams)</br>
+       North China University of Water Resource and Electric Power, China </br> 
+       </p>
+       <b>Visiting Scholar</b> at State Key Laboratory of Virtual Reality Technology and Systems, Beihang University</br>
+    </td>
+  </tr>
+  <tr>
+    <th>2008 - 2012</th>
+    <td>
+      <b>B.S. Eng.</b> in Computer Science and Engineering</br>
+      North China University of Water Resource and Electric Power, China</br>
+      GPA ranking: top 10% out of 150 students
+    </td>
+  </tr>
+ </table>
 
-header h1 {
-  font-size: 30px;
-  line-height: 1.5;
-  margin: 0 0 0 -40px;
-  font-weight: bold;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #b5e853;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
-  letter-spacing: -1px;
-  -webkit-font-smoothing: antialiased;
-}
 
-header h1:before {
-  content: "./ ";
-  font-size: 24px;
-}
+<h3>
+<a id="publications" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications and Presentations</h3>
 
-header h2 {
-  font-size: 18px;
-  font-weight: 300;
-  color: #666;
-}
+<ul>
+  <li>
 
-#downloads .btn {
-  display: inline-block;
-  text-align: center;
-  margin: 0;
-}
+    <b>A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</b>
+    <a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf"><strong>PDF</strong></a></br>
+    <u>Yang Gao</u>, Shuai Li, Hong Qin and Aimin Hao</br>
+    Proceedings of the Computer Graphics International Conference (CGI), 2017</br>
+    <table>
+    <tr>
+    <th><img src="./images/CGI2017.jpg" style="width:300px;height:180px;"></th>
+    <td>
+    <b>Abstract:</b> We propose a novel integrated approach supporting the seamless unification of FLIP and shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid-solid interaction and solid melting. The key innovation of this paper is a unified Lagrangian framework that seamlessly blends FLIP and PBD based shape matching constraint towards the natural yet strong coupling between fluid and deformable solid. Within our integrated framework, it enables many complicated fluid-solid phenomena with ease. We conduct various kinds of experiments. All the results demonstrate the advantages of our unified hybrid approach towards visual fidelity, efficiency, stability, and versatility.
+    </td>
+    </tr>
+    </table>
+  </li>
 
-/* Main Content
-*/
+  <li>
+    <b>Oral presentation at Computer Graphics International 2017 (Yokohama, Japan)</br></b>
+    <i>"A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods"</i>
+  </li>
+</ul>
+<h3>
 
-#main_content {
-  width: 100%;
-  -webkit-font-smoothing: antialiased;
-}
-section img {
-  max-width: 100%
-}
+<h3>
+<a id="service" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Service to University</h3>
+<table>
+  <tr>
+    <th width="90px">2014.09 - 2015.01</th>
+    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure</i> at Beihang University</td>
+     </tr>
+</table>
+<table>
+  <tr>
+    <th width="90px">2015.09 - 2016.01</th>
+    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure</i> at Beihang University</td>
+      </tr>
+</table>
+<table>
+  <tr>
+    <th width="90px">2016.09 - 2017.01</th>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language</i> at Beihang University</td>
+  </tr>
+</table>
+<h3>
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #b5e853;
-  letter-spacing: -0.03em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
-}
+<a id="awards" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards and  Invention Patent </h3>
+<table>
+  <tr>
+    <th width="90px"> Authorized</th>
+    <td>2016.<i>基于格子Boltzmann的流体可视化仿真方法(First student inventor)</i></td>
+    <td><i>2017.一种基于欧拉-拉格朗日耦合方法的流体仿真方法(First student inventor)</i></td>
+  </tr>
+  <tr>
+    <th>Substantive Examination</th>
+    <td>2015.<i>一种基于离散格子Boltzmann双分布模型的热流体仿真方法(First student inventor)</i></td>
+    <td>2015.<i>一种基于FLIP与Shape matching混合模型的不可融多相流仿真方法(First student inventor)</i></td>
+  </tr>
+  </table>
 
-#main_content h1 {
-  font-size: 30px;
-}
+<h3>
+<a id="skills" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
 
-#main_content h2 {
-  font-size: 24px;
-}
+<table>
+  <tr>
+    <th width="90px">Programming</th>
+    <td>
+      Proficient in C/C++ with CUDA</br>
+      Familiar with Python, OpenGL and Matlab
+      </td>
+  </tr>
+  <tr>
+    <th>Rendering</th>
+    <td>Blender with Maya (MentalRay), POV-Ray and Blender</td>
+  </tr>
+  <tr>
+    <th>Language</th>
+    <td>
+      Chinese: native</br>
+      English: fluent, CET-6 score: 478
+    </td>
+  </tr>
+</table>
 
-#main_content h3 {
-  font-size: 18px;
-}
+<h3>
+<a id="colleagues" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Colleagues</h3>
 
-#main_content h4 {
-  font-size: 14px;
-}
+<table>
+  <tr>
+    <th width="90px"><a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Hong Qin</a></th>
+    <td>
+      Full Professor (with tenure) at Stony Brook University
+      </td>
+  </tr>
+  <tr>
+    <th><a href="http://hsiatsing.github.io/" class="user-mention">Qing Xia</a></th>
+    <td>Ph.D. candidate at Beihang University</td>
+  </tr>
+</table>
 
-#main_content h5 {
-  font-size: 12px;
-  text-transform: uppercase;
-  margin: 0 0 5px 0;
-}
+<p></p>
+      </section>
 
-#main_content h6 {
-  font-size: 12px;
-  text-transform: uppercase;
-  color: #999;
-  margin: 0 0 5px 0;
-}
-
-dt {
-  font-style: italic;
-  font-weight: bold;
-}
-
-ul li {
-  list-style: none;
-}
-
-ul li:before {
-  content: ">>";
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  font-size: 13px;
-  color: #b5e853;
-  margin-left: -37px;
-  margin-right: 21px;
-  line-height: 16px;
-}
-
-blockquote {
-  color: #aaa;
-  padding-left: 10px;
-  border-left: 1px dotted #666;
-}
-
-pre {
-  background: rgba(0, 0, 0, 0.9);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  padding: 10px;
-  font-size: 14px;
-  color: #b5e853;
-  border-radius: 2px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  text-wrap: normal;
-  overflow: auto;
-  overflow-y: hidden;
-}
-
-table {
-  width: 100%;
-  margin: 0 0 20px 0;
-}
-
-th {
-  text-align: left;
-  border-bottom: 1px dashed #b5e853;
-  padding: 5px 10px;
-}
-
-td {
-  padding: 5px 10px;
-}
-
-hr {
-  height: 0;
-  border: 0;
-  border-bottom: 1px dashed #b5e853;
-  color: #b5e853;
-}
-
-/* Buttons
-*/
-
-.btn {
-  display: inline-block;
-  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
-  padding: 8px 18px;
-  border-radius: 50px;
-  border: 2px solid rgba(0, 0, 0, 0.7);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
-  border-top: 2px solid rgba(0, 0, 0, 1);
-  color: rgba(255, 255, 255, 0.8);
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-  font-size: 13px;
-  text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
-}
-
-.btn:hover {
-  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8));
-}
-
-.btn .icon {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin: 1px 8px 0 0;
-  float: left;
-}
-
-.btn-github .icon {
-  opacity: 0.6;
-  background: url("../images/blacktocat.png") 0 0 no-repeat;
-}
-
-/* Links
-   a, a:hover, a:visited
-*/
-
-a {
-  color: #63c0f5;
-  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
-}
-
-/* Clearfix */
-
-.cf:before, .cf:after {
-  content:"";
-  display:table;
-}
-
-.cf:after {
-  clear:both;
-}
-
-.cf {
-  zoom:1;
-}
+      <footer>
+        <p><small>Hosted on GitHub Pages</small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    </h3>
+    </a>
+    </div>
+   </body>
+</html>
