--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
     <th><a href="http://hsiatsing.github.io/" class="user-mention">Qing Xia</a></th>
     <td>Ph.D. candidate at Beihang University</td>
   </tr>
+  <tr>
+    <th><a href="https://troyzhai.github.io/" class="user-mention">Xiao Zhai</a></th>
+    <td>Ph.D. candidate at Beihang University</td>
+  </tr>
 </table>
 
 <p></p>
