--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </table>>
 
  
-      <p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and Prof. Shuai Li (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics.</p>
+      <p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Prof. Shuai Li</a> (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics.</p>
   
 
 <h3>
