--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <li>
 
     <b>A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</b>
+    <a href="http://dl.acm.org/citation.cfm?id=3095151"><strong>LINK</strong></a></br>
     <a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf"><strong>PDF</strong></a></br>
     <u>Yang Gao</u>, Shuai Li, Hong Qin and Aimin Hao</br>
     Proceedings of the Computer Graphics International Conference (CGI), 2017</br>
