--- a/index.html
+++ b/index.html
@@ -146,12 +146,16 @@
     <th width="90px">Programming</th>
     <td>
       Proficient in C/C++ with CUDA</br>
-      Familiar with Python, OpenGL and Matlab
+      Familiar with Python, OpenGL
       </td>
   </tr>
   <tr>
-    <th>Rendering</th>
-    <td>Blender with Maya (MentalRay), POV-Ray and Blender</td>
+    <th>Renderer</th>
+    <td>MentalRay, Vray, POV-Ray and Blender</td>
+  </tr>
+  <tr>
+    <th>Software</th>
+    <td>Maya, Unity3D, 3DMax, Matlab and RealFlow</td>
   </tr>
   <tr>
     <th>Language</th>
