--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     Proceedings of the Computer Graphics International Conference (CGI), 2017</br>
     <table>
     <tr>
-    <th><a href="http://dl.acm.org/citation.cfm?id=3095151"><img src="./images/CGI2017.jpg" style="width:300px;height:180px;"></a></th>
+    <th><a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/CGI2017.jpg" style="width:300px;height:180px;"></a></th>
     <td>
     <b>Abstract:</b> We propose a novel integrated approach supporting the seamless unification of FLIP and shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid-solid interaction and solid melting. The key innovation of this paper is a unified Lagrangian framework that seamlessly blends FLIP and PBD based shape matching constraint towards the natural yet strong coupling between fluid and deformable solid. Within our integrated framework, it enables many complicated fluid-solid phenomena with ease. We conduct various kinds of experiments. All the results demonstrate the advantages of our unified hybrid approach towards visual fidelity, efficiency, stability, and versatility.
     </td>
