--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
     <i>"A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods"</i>
   </li>
 </ul>
+
+<ul>
+  <li>
+
+    <b>An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</b>
+    <a href="http://www.sciencedirect.com/science/article/pii/S1524070317300589#!"><strong>LINK</strong></a>  <a href="https://ac.els-cdn.com/S1524070317300589/1-s2.0-S1524070317300589-main.pdf?_tid=be6bf648-aff3-11e7-8aca-00000aacb362&acdnat=1507884887_66ae5261a2e5e0c698567e3d87d04785"><strong>PDF</strong></a></br>
+    <u>Yang Gao</u>, Shuai Li, Lipeng Yang, Hong Qin and Aimin Hao</br>
+   Graphical Models, Volume 94, November 2017, Pages 14-24</br>
+    <table>
+    <tr>
+    <th><a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/CGI2017.jpg" style="width:300px;height:180px;"></a></th>
+    <td>
+    <b>Abstract:</b> For melting simulation, solid-liquid coupling, liquid-gas interaction, bubble/foam generation, etc., many new methods have been emerging in recent years in computer graphics. To further push advance the technical frontier of the aforementioned phenomena, our novel solution is to focus on an efficient heat-based method towards faithful simulation of physical procedures pertinent to phase transitions and their dynamic interactions. On the methodology aspect, this paper details a simplified temperature-based model to animate the phase transitions and their dynamic interactions, including melting, freezing, and vaporization, by integrating the latent heat model with relevant governing physical laws. On the numerical aspect, our framework supports a new algorithm aiming at tight coupling of heat transfer and multiphase FLIP-based fluids. Specifically for liquid-gas phase transition, we take into account the dissolved gas involved in liquid which further enhances the bubble generation effects. Besides the unique feature of heat transfer, we also devise a SPH-FLIP coupled model to simulate sub-grid bubbles, which enables three-phase dynamic interactions among solid, liquid, and gas. The extensive experiments show that our hybrid approach can simultaneously handle multi-phase transition driven by physics-based heat conditions, as well as the multi-phase dynamic interactions with high fidelity and visual appeal.
+    </td>
+    </tr>
+    </table>
+  </li>
+
+  <li>
+    <b>Oral presentation at Computer Graphics International 2017 (Yokohama, Japan)</br></b>
+    <i>"A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods"</i>
+  </li>
+</ul>
 <h3>
 
 <h3>
