--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
    Graphical Models, Volume 94, November 2017, Pages 14-24</br>
     <table>
     <tr>
-    <th><a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/GMOD.jpg" style="width:300px;height:180px;"></a></th>
+    <th><a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"><img src="./images/GMOD.jpg" style="width:300px;height:180px;"></a></th>
     <td>
     <b>Abstract:</b> This paper details a simplified temperature-based model to animate the phase transitions and their dynamic interactions by integrating the latent heat model with relevant governing physical laws. On the numerical aspect, our framework supports a new algorithm aiming at tight coupling of heat transfer and multiphase FLIP-based fluids. Specifically for liquid-gas phase transition, we take into account the dissolved gas involved in liquid which further enhances the bubble generation effects. Besides the unique feature of heat transfer, we also devise a SPH-FLIP coupled model to simulate sub-grid bubbles, which enables three-phase dynamic interactions among solid, liquid, and gas. 
     </td>
