--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </nav>
       </div><!-- end header -->
 
-    <div class="wrapper">
-
+     <body class="layout-center has-menu" alog-page-type="6">
+    <div id="body" class="container">
     <!--  <section>
         <div id="title">
           <h1>Welcome to Qing Xia's Homepage</h1>
@@ -34,7 +34,7 @@
         <p>﻿</p> 
 
 <h2>
-<a name="qing-xia" class="anchor" href="#qing-xia"><span class="octicon octicon-link"></span></a>Qing Xia （夏 清）</h2>
+<a name="yang-gao" class="anchor" href="#yang-gao"><span class="octicon octicon-link"></span></a>Yang Gao （高 阳）</h2>
 
 <hr>
 
@@ -47,21 +47,18 @@
 <a href="#work">Selected Work</a> &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#colleages">Colleages</a><p>
 
-<div style="float:right"><p><img src="./images/XiaQing.jpg" style="width:150px;height:217px;" alt="qing"/></p></div>
+<!--<div style="float:right">-->
+<p><img src="./images/photo.jpg" style="width:215px;height:301px;" alt="qing"/></p></div>
 
 <div>
-<p>I am now a Ph.D. candidate of computer science at Beihang University. 
-I revieved my bachelor degree in school of computer science and engineering at Beihang University in 2012
-and then joined the State Key Laboratory of Virtual Reality Technology and Systems (虚拟现实技术与系统国家重点实验室) for my doctorate supervised by Prof. Aimin Hao (郝爱民 教授) from Beihang University and Prof. Hong Qin (秦洪 教授) from Stony Brook University.
-My major interests are in computer graphics, geometry modeling, shape analysis and machine learning, and I am also 
-interested in implementating various algorithms and techniques about graphics and deep learning. If everything goes well, I will graduate in June 2018. </p>
+<p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Shuai Li</a> (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics. </p>
 
-<p>Here's my cv in <a href=".\me\CV-QINGXIA-2p.pdf">English</a> and <a href=".\me\简历-夏清-2页.pdf">Chinese</a>.</p>
+<!--<p>Here's my cv in <a href=".\me\CV-QINGXIA-2p.pdf">English</a> and <a href=".\me\简历-夏清-2页.pdf">Chinese</a>.</p>-->
 
 <!--<p><a href=".\me\zhu\index.html">This link is only for my beloved Zhuzhu.</a></li></p>--> 
 
 <p><strong>Email</strong><br>
-  <a href="mailto:neijiangxiaqing@gmail.com">neijiangxiaqing@gmail.com</a>; <a href="mailto:xiaqing@buaa.edu.cn">xiaqing@buaa.edu.cn</a></p>
+  <a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>; <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
 
 <p><strong>Organization</strong><br>
   <a href="http://vrlab.buaa.edu.cn/">State Key Laboratory of Virtual Reality Technology and Systems</a><br>
