--- a/index.html
+++ b/index.html
@@ -47,11 +47,27 @@
 <a href="#work">Selected Work</a> &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#colleages">Colleages</a><p>
 
-<!--<div style="float:right">-->
-<p><img src="./images/photo.jpg" style="width:215px;height:301px;" alt="qing"/></p></div>
+ <table>
+  <tr>
+    <th>
+      <p>
+          <img src="./images/photo.jpg" style="width:215px;height:301px;">
+       </p>
+    </th>
+    <td>
+       <div class="inner">
+     
+        <h1>Yang Gao  (高阳)</h1>
+        <h4>Ph.D. candidate<br/>
+          SKL. VR Technology and Systems<br/>
+          <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a><br/>
+          gaoyang2963@163.com</h4>
+         </td>
+  </tr>
+</table>>
 
-<div>
-<p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Shuai Li</a> (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics. </p>
+ 
+      <p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Shuai Li</a> (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling, rendering and all other relevant topics in computer graphics.</p>
 
 <!--<p>Here's my cv in <a href=".\me\CV-QINGXIA-2p.pdf">English</a> and <a href=".\me\简历-夏清-2页.pdf">Chinese</a>.</p>-->
 
