--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <h4>Ph.D. candidate<br/>
           SKL. VR Technology and Systems<br/>
           <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a><br/>
-          gaoyang2963@163.com</h4>
+          <p><strong>Email</strong><br/>
+  <a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>; <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
+</h4>
          </td>
   </tr>
 </table>>
@@ -73,8 +75,6 @@
 
 <!--<p><a href=".\me\zhu\index.html">This link is only for my beloved Zhuzhu.</a></li></p>--> 
 
-<p><strong>Email</strong><br>
-  <a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>; <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
 
 <p><strong>Organization</strong><br>
   <a href="http://vrlab.buaa.edu.cn/">State Key Laboratory of Virtual Reality Technology and Systems</a><br>
