--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         <h4>Ph.D. candidate<br/>
           SKL. VR Technology and Systems<br/>
           <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a><br/>
-          <p><strong>Email</strong><br/>
-  <a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>; <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
+          <p><strong>Email:</strong><a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>  <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
 </h4>
          </td>
   </tr>
