--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <title>Qing Xia's Homepage</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <title>Gaoyangvr.GitHub.io by gaoyangVR</title>
   </head>
 
   <body>
-    <!--  <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/HsiaTsing/Homepage">View On GitHub</a></li>
-		  <li class="sns"><a href="https://twitter.com/HsiaTsing">Twitter</a></li>
-          <li class="sns"><a href="http://weibo.com/neijiangxiaqing">Weibo</a></li>
-          <li class="title">SNS</li>
-        </nav>
-      </div><!-- end header -->
+ 
 
      <body class="layout-center has-menu" alog-page-type="6">
     <div id="body" class="container">
-    <!--  <section>
-        <div id="title">
-          <h1>Welcome to Qing Xia's Homepage</h1>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/HsiaTsing">HsiaTsing</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-		-->
-        <p>﻿</p> 
-
+    
 <h2>
 <a name="yang-gao" class="anchor" href="#yang-gao"><span class="octicon octicon-link"></span></a>Yang Gao （高 阳）</h2>
 
