--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qing Xia's Homepage</title>
+    <title>Yang Gao's Homepage</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -15,9 +15,10 @@
 
   <body>
  
-
-     <body class="layout-center has-menu" alog-page-type="6">
-    <div id="body" class="container">
+<div class="wrapper">
+    <p></p>
+   <!--  <body class="layout-center has-menu" alog-page-type="6">
+    <div id="body" class="container">  -->
     
 <h2>
 <a name="yang-gao" class="anchor" href="#yang-gao"><span class="octicon octicon-link"></span></a>Yang Gao （高 阳）</h2>
