--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <body>
  
-<div class="wrapper">
+<!-- <div class="wrapper">-->
     <p></p>
-   <!--  <body class="layout-center has-menu" alog-page-type="6">
-    <div id="body" class="container">  -->
+    <body class="layout-center has-menu" alog-page-type="6">
+    <div id="body" class="container">  
     
 <h2>
 <a name="yang-gao" class="anchor" href="#yang-gao"><span class="octicon octicon-link"></span></a>Yang Gao （高 阳）</h2>
