--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Gaoyangvr.GitHub.io by gaoyangVR</title>
   </head>
 
-  <body>
+  <body  style="width:1000px; margin:0 auto>
  
 <!-- <div class="wrapper">-->
     <p></p>
