--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Gaoyangvr.GitHub.io by gaoyangVR</title>
   </head>
 
-  <body  style="width:1000px; margin:0 auto>
+  <body>
  
 <!-- <div class="wrapper">-->
-    <p></p>
-    <body class="layout-center has-menu" alog-page-type="6">
+     <body class="layout-center has-menu" alog-page-type="6">
+      <div align="center">
     <div id="body" class="container">  
     
 <h2>
