--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
 
 <h3>
+ <ul>
+  <li>
 <a id="publications" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications and Presentations</h3>
 
     <b>1. A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods</b>
@@ -89,8 +91,10 @@
     </td>
     </tr>
     </table>
-  </li>
+  </ul>
+   </li>
 
+<ul>
   <li>
     <b>2. Oral presentation at Computer Graphics International 2017 (Yokohama, Japan)</br></b>
     <i>"A Novel Fluid-solid Coupling Framework Integrating FLIP and Shape Matching Methods"</i>
@@ -151,6 +155,7 @@
 </table>
 <h3>
 
+ <h3>
  <a id="awards" class="anchor" href="#authorss" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards</h3>
 <table>
   <tr>
@@ -161,17 +166,19 @@
 <table>
   <tr>
     <th width="90px">2017</th>
-    <td><b>Teaching Assistant</b> </br><i>Excellent Foundation of BUAA for PhD students</td>
+    <td><b>Teaching Assistant</b> </br><i> National Graduate Scholarship </td>
   </tr>
 </table>
 <table>
   <tr>
-    <th width="90px">2017</th>
-    <td><b>Teaching Assistant</b> </br><i> National Graduate Scholarship </td>
+    <th width="90px">2018</th>
+    <td><b>Teaching Assistant</b> </br><i>Excellent Foundation of BUAA for PhD students</td>
   </tr>
 </table>
 
-<a id="awards" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards and  Invention Patent </h3>
+
+<h3>
+<a id="awards" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Invention Patent </h3>
 <table>
   <tr>
     <th width="90px"> Authorized</th>
