--- a/index.html
+++ b/index.html
@@ -161,19 +161,19 @@
 <table>
   <tr>
     <th width="90px">2015/2016 </th>
-    <td><b>Teaching Assistant</b> </br><i>First-class academic scholarship </td>
+    <td> </br><i>First-class academic scholarship </td>
   </tr>
 </table>
 <table>
   <tr>
     <th width="90px">2017</th>
-    <td><b>Teaching Assistant</b> </br><i> National Graduate Scholarship </td>
+    <td></br><i> National Graduate Scholarship </td>
   </tr>
 </table>
 <table>
   <tr>
     <th width="90px">2018</th>
-    <td><b>Teaching Assistant</b> </br><i>Excellent Foundation of BUAA for PhD students</td>
+    <td></br><i>Excellent Foundation of BUAA for PhD students</td>
   </tr>
 </table>
 
