--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h4>Ph.D. candidate<br/>
           SKL. VR Technology and Systems<br/>
           <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a><br/>
-           <a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>; <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
+         <b>Email:</b>  <a href="mailto:gaoyang_vr@buaa.edu.cn">gaoyang_vr@buaa.edu.cn</a>; <a href="mailto:gaoyang2963@163.com">gaoyang2963@163.com</a></p>
          </td>
   </tr>
 </table>>
