--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
  
       <p>I'm currently a Ph.D. candidate in computer science at the State Key Laboratory of Virtual Reality Technology and Systems (SKL. VR Technology and Systems) of <a href="http://ev.buaa.edu.cn" class="user-mention">Beihang University</a> in Beijing. My advisors are Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=15451">Aimin Hao</a> (郝爱民 教授) and  Prof. <a href="http://graduate.buaa.edu.cn/TutorInfo.jsp?id=206411">Shuai Li</a> (李帅 教授), and I am in long-term collaboration with <a href="http://www3.cs.stonybrook.edu/~qin/" class="user-mention">Prof. Hong Qin</a> (秦洪 教授). My research interests include physics-based fluid modelling/simulation, realistic fluid animation, 3D modeling,machine learning and all other relevant topics in computer graphics. I am also interested in applying deeping learning methods to solve physical equations for efficient simulation. If everything goes well, I will graduate in April 2019.</p>
-  
+  <p>Here's my cv in <a href=".\GaoYang.pdf">English</a> and <a href=".\高阳简历.pdf">Chinese</a>.</p>
 
 <h3>
 <a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
