--- a/index.html
+++ b/index.html
@@ -121,6 +121,25 @@
 
 </ul>
 <h3>
+  
+  <ul>
+  <li>
+
+    <b>4. An Efficient FLIP and Shape Matching Coupled Method for Fluid-solid and Two-phase Fluid Simulations</b>
+    <a href="https://link.springer.com/article/10.1007%2Fs00371-018-1569-8"><strong>LINK</strong></a> </br>
+    <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao</br>
+   The visual computer, publishing online</br>
+    <table>
+    <tr>
+    <th><a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"><img src="./images/GMOD.jpg" style="width:300px;height:180px;"></a></th>
+    <td>
+    <b>Abstract:</b> In this paper, we propose a novel integrated approach supporting the seamless unification of FLIP and dynamic shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid–solid interactions, solid deformations, melting and immiscible fluid coupling. Within our integrated framework, it enables many complicated fluid–solid phenomena with ease.  
+    </td>
+    </tr>
+    </table>
+  </li>
+
+</ul>
 
 <h3>
 <a id="service" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Service to University</h3>
