--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
    The visual computer, publishing online</br>
     <table>
     <tr>
-    <th><a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"><img src="./images/GMOD.jpg" style="width:300px;height:180px;"></a></th>
+    <th><a href="https://gaoyangVR.github.io"><img src="./images/TVC18.png" style="width:300px;height:180px;"></a></th>
     <td>
     <b>Abstract:</b> In this paper, we propose a novel integrated approach supporting the seamless unification of FLIP and dynamic shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid–solid interactions, solid deformations, melting and immiscible fluid coupling. Within our integrated framework, it enables many complicated fluid–solid phenomena with ease.  
     </td>
