--- a/index.html
+++ b/index.html
@@ -124,13 +124,28 @@
     <b>4. An Efficient FLIP and Shape Matching Coupled Method for Fluid-solid and Two-phase Fluid Simulations</b>
     <a href="https://link.springer.com/article/10.1007%2Fs00371-018-1569-8"><strong>LINK</strong></a> </br>
     <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao</br>
-   The visual computer, publishing online</br>
+   The visual computer, publised</br>
     <table>
     <tr>
     <th><a href="https://youtu.be/7QDI7qHfVJM"><img src="./images/TVC18.png" style="width:300px;height:180px;"></a></th>
     <td>
     <b>Abstract:</b> In this paper, we propose a novel integrated approach supporting the seamless unification of FLIP and dynamic shape matching. We devise new algorithms to tackle existing difficulties when handling new phenomena such as high-fidelity fluid–solid interactions, solid deformations, melting and immiscible fluid coupling. Within our integrated framework, it enables many complicated fluid–solid phenomena with ease.  
     </td>
+    </tr>
+    </table>
+  </li>
+</ul>
+
+  <li>
+    <b>5. Robust and Efficient SPH Simulation for High-speed Fluids with the Dynamic Particle Partitioning Method</b>
+    <a href="https://link.springer.com/article/10.1007%2Fs00371-018-1569-8"><strong>LINK</strong></a> </br>
+    Zhong Zheng, <u>Yang Gao</u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao (Co-First author)</br>
+   Pacific Graphics 2018, accept</br>
+    <table>
+    <tr>
+    <th><a href="https://youtu.be/RdFyBgftC_E"><img src="./images/PG2018.png" style="width:300px;height:180px;"></a></th>
+    <td>
+    <b>Abstract:</b> In this paper, our research efforts are devoted to the efficiency issue of the SPH simulation when the ratio of velocities among fluid particles is large. Specifically, we introduce a k-means clustering method into the SPH framework to dynamically partition fluid particles into two disjoint groups based on their velocities, we then use a two-scale time step scheme for these two types of particles. The smaller time steps are for particles with higher speed in order to preserve temporal details and guarantee the numerical stability. In contrast, the larger time steps are used for particles with smaller speeds to reduce the computational expense,andbothtypesofparticlesaretightlycoupledinthesimulation.Weconductvariousexperimentswhichhavemanifested the advantages of our methods over the conventional SPH technique and its new variants in terms of efficiency and stability. </td>
     </tr>
     </table>
   </li>
