--- a/index.html
+++ b/index.html
@@ -169,19 +169,19 @@
 <table>
   <tr>
     <th width="90px">2016.09 - 2017.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C/C++)</i> at Beihang University</td>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C)</i> at Beihang University</td>
   </tr>
 </table>
 <table>
   <tr>
     <th width="90px">2017.09 - 2018.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C/C++)</i> at Beihang University</td>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C)</i> at Beihang University</td>
   </tr>
 </table>
 <table>
   <tr>
     <th width="90px">2018.09 - </th>
-    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C/C++)</i> at Beihang University</td>
+    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C)</i> at Beihang University</td>
   </tr>
 </table>
 <h3>
