--- a/index.html
+++ b/index.html
@@ -156,26 +156,33 @@
 <a id="service" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Service to University</h3>
 <table>
   <tr>
-    <th width="90px">2014.09 - 2015.01</th>
+    <th width="90px">2014.09 - 2015.01 / 2015.09 - 2016.01</th>
     <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure</i> at Beihang University</td>
      </tr>
 </table>
 <table>
   <tr>
-    <th width="90px">2015.09 - 2016.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Algorithm and Data Structure </i> at Beihang University</td>
-      </tr>
-</table>
-<table>
-  <tr>
-    <th width="90px">2016.09 - 2017.01</th>
+    <th width="90px">2016.09 - 2017.01 / 2017.09 - 2018.01</th>
     <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C)</i> at Beihang University</td>
   </tr>
 </table>
 <table>
   <tr>
-    <th width="90px">2017.09 - 2018.01</th>
-    <td><b>Teaching Assistant</b> </br><i>Advanced Programming Language (C)</i> at Beihang University</td>
+    <th width="90px">2015.11</th>
+    <td><b>Beijing</b> </br><i>Attended international conference VRST </i> at Beihang University</td>
+  </tr>
+</table>
+
+<table>
+  <tr>
+    <th width="90px">2016.12</th>
+    <td><b>Macao</b> </br><i>Attended and demonstrated PCI simulator on SIGGRAPH Asia</i> </td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <th width="90px">2017.7</th>
+    <td><b>YOK</b> </br><i>Attended and make an oral presentation on CGI at Japan</i> </td>
   </tr>
 </table>
 <h3>
