--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ The Visual Computer, 35: 1741–1753, 2019.<a href="./papers/TVC2019.pdf">[PDF]<
 25th ACM Symposium on Virtual Reality Software and Technology, 14: 1–10, 2019.<a href="./papers/VRST2019.pdf">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/TVC2019YYH.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/TVC2019YHH.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Real-time Simulation of Electrocautery Procedure using Mesh-free Methods in Laparoscopic Cholecystectomy</strong>.<br />
 Junjun Pan, Yuhan Yang, <u>Yang Gao</u>, Hong Qin and Yaqing Qi.  <br />
 The Visual Computer volume 35, pages861–872, 2019.<a href="./papers/TVC2019YHH.pdf">[PDF]</a></div></div>
@@ -131,7 +131,7 @@ Pacific Graphics 2018, 10.2312/pg.20181268 (short paper).
 <a href="./papers/PG2018.pdf">[PDF]</a></div></div>
 </br></br>
 
-<div>  <img src="./images/2015-pgshort-modal-subdivision.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;">
+<div>  <img src="./images/YWC.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;">
 <div><strong>A novel location awareness method for spot beam emitters</strong>.<br />
 Weicai Yang，Qing Chang，Hui Li，<u>Yang Gao</u>>，Lina Bao.</br>
   IET Radar, Sonar & Navigation, 12(12): 1493-1499, 2018.  
