--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Computer Graphics Forum, 39(6): 180-191, 2020.
 <a href="./papers/CGF2020.pdf">[PDF]</a></div></div>
 <br/></br><br/>
 
-<div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/GM2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.youtube.com/watch?v=xyh-6W9Jjqk"><img src="./images/GM2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Dynamic Particle Partitioning SPH Model for High-speed Fluids Simulation</strong>.<br />
 <u>Yang Gao</u>,Zhong Zheng, Jin Li, Shuai Li*, Hong Qin and Aimin Hao.  <br />
 Graphical Models, 109: 101061, 2020.
