--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Graphical Models, 109: 101061, 2020.
 The Visual Computer, 35: 1741–1753, 2019.<a href="./papers/TVC2019.pdf">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/VRST2019.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://youtu.be/qJA61YajK4E"> <img src="./images/VRST2019.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>A Hybrid Method for Powdered Materials Modeling</strong>.<br />
 <u>Yang Gao<sup>*</sup></u>, Yinghao Xu, Shuai Li, Aimin Hao and Hong Qin.  <br />
 25th ACM Symposium on Virtual Reality Software and Technology, 14: 1–10, 2019.<a href="./papers/VRST2019.pdf">[PDF]</a></div></div>
