--- a/index.html
+++ b/index.html
@@ -76,17 +76,41 @@
  
   <p><strong>Publications and Presentations</strong></p>
 
- <b>News</b></br>
+ #<b>News</b></br>
+
+
+<b>2021</b></br>
+
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/TVCG21.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Simulating Multi-scale, Granular Materials and Their Transitions with a Hybrid Euler-Lagrange Solver</strong>.<br />
+<u>Yang Gao<u>, Shuai Li, Aimin Hao and Hong Qin*.  <br />
+ IEEE Transactions on Visualization and Computer Graphics, to appear.
+<a href="https://www.gaoyangvr.github.io">[PDF]</a></div></div>
+</br></br>
+
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/ISMAR21-Z.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Research on the Usability of Hand Motor Function Training based on VR System</strong>.<br />
+<u>Yang Gao*<u>, Yingnan Zhai, Mingyang Hao, Lizhen Wang and Aimin Hao.  <br />
+ IEEE International Symposium on Mixed and Augmented Reality (ISMAR)- Adjunct, accept.
+<a href="https://www.gaoyangvr.github.io">[PDF]</a></div></div>
+</br></br>
+
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/ISMAR21-C.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Analysis and Validation for Kinematic and Physiological Data of VR Training System</strong>.<br />
+Shuwei Chen, Ben Hu, <u>Yang Gao*<u>, Zhiping Liao, Yang Liu, Jianhua Li and Aimin Hao*.  <br />
+ IEEE International Symposium on Mixed and Augmented Reality (ISMAR)- Adjunct, accept.
+<a href="https://www.gaoyangvr.github.io">[PDF]</a></div></div>
+</br></br>
 
 <b>2020</b></br>
 
 <div> <a href="https://www.youtube.com/watch?v=SvPZ17Pb0ek&feature=youtu.be"><img src="./images/ISMAR.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Lower Limb Balance Rehabilitation of Post-stroke Patients Using an Evaluating and Training Combined Augmented Reality System</strong>.<br />
 Shuwei Chen, Ben Hu, <u>Yang Gao*</u>, Zhiping Liao, Jianhua Li and Aimin Hao.  <br />
-IEEE International Symposium on Mixed and Augmented Reality (ISMAR), accepted (poster).
+IEEE International Symposium on Mixed and Augmented Reality (ISMAR)-Adjunct, pp. 217-218,2020 .
 <a href="./papers/ISMR2020.pdf">[PDF]</a></div></div>
 </br></br>
-   
+
 <div> <a href="https://www.youtube.com/watch?v=d2vB5rHMZxY"><img src="./images/CGF2020.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Accelerating Liquid Simulation With an Improved Data-Driven Method</strong>.<br />
 <u>Yang Gao*</u>, Quancheng Zhang, Shuai Li, Hong Qin and Aimin Hao.  <br />
