--- a/index.html
+++ b/index.html
@@ -76,8 +76,45 @@
  
   <p><strong>Publications and Presentations</strong></p>
 
- #<b>News</b></br>
+ <b>News</b></br>
+<div class="news">
+  <!-- <h4><b>News</b></h4> -->
+  <!-- <div><h5 style="font-family: Helvetica Neue,Source Sans Pro,Arial"><b>News</b></h5></div> -->
 
+  <!-- 
+
+  <table>
+    <tbody>
+  <tr>
+        <td>      •    <em>2021/09</em>     </td>
+        <td>I will serve as the question-master the GAMES VR interaction (Sept. 9).</td>
+      </tr>
+      <tr>
+        <td>      •    <em>2021/08</em>     </td>
+        <td>Two works are accepted to ISMAR 2021 as posters.</td>
+      </tr>
+      <tr>
+        <td>      •    <em>2021/08</em>     </td>
+        <td>One paper is accepted to TVCG.</td>
+       <tr>
+        <td>      •    <em>2021/06</em>     </td>
+        <td>I will serve as a reviewer on the Conference of ISMAR2021.</td>
+      </tr>
+      </tr>
+      <tr>
+        <td>      •    <em>2021/03</em>     </td>
+        <td>I will serve on the Program Committee of CCF CAD/CG 2021.</td>
+      </tr>
+      <tr>
+        <td>      •    <em>2020/1</em>     </td>
+        <td>I will serve as a reviewer on the Conference of IEEE VR.</td>
+      </tr>
+    </tbody>
+  </table>
+
+ # <h5><a href="/allnews.html">         <b>… See all news</b></a></h5>
+
+</div>
 
 <b>2021</b></br>
 
@@ -162,8 +199,6 @@ Weicai Yang，Qing Chang，Hui Li，<u>Yang Gao</u>>，Lina Bao.</br>
 <a href="http://https://ieeexplore.ieee.org/document/8567862/">[PDF]</a></div></div>
 </br></br>
 
-
-
 <div> <a href="https://www.youtube.com/watch?v=cqZLM5mrs6o"> <img src="./images/GMOD.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>An efficient heat-based model for solid-liquid-gas phase transition and dynamic interaction</strong>.<br />
 <u>Yang Gao</u>, Shuai Li, Lipeng Yang, Hong Qin and Aimin Hao.</br>
@@ -177,9 +212,6 @@ Graphical Models, 94: 14-24, 2017.
  Proceedings of the Computer Graphics International Conference (CGI), 2017.
 <a href="http://www3.cs.stonybrook.edu/~qin/research/2017-cgi-fluid-solid-coupling-framework.pdf">[PDF]</a></div></div>
 </br>
-
-
-
 
 
    </body>
