--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <tbody>
   <tr>
         <td>      •    <em>2021/09</em>     </td>
-        <td>I will serve as the question-master the GAMES VR interaction (Sept. 9).</td>
+        <td>I will serve as the question-master the GAMES VR interaction (Sept. 09).</td>
       </tr>
       <tr>
         <td>      •    <em>2021/08</em>     </td>
@@ -103,13 +103,13 @@
         <td>I will serve on the Program Committee of CCF CAD/CG 2021.</td>
       </tr>
       <tr>
-        <td>      •    <em>2020/1</em>     </td>
+        <td>      •    <em>2020/01</em>     </td>
         <td>I will serve as a reviewer on the Conference of IEEE VR.</td>
       </tr>
     </tbody>
   </table>
 
- # <h5><a href="/allnews.html">         <b>… See all news</b></a></h5>
+ <!--<h5><a href="/allnews.html">         <b>… See all news</b></a></h5>-->
 
 </div>
 
