--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
     <![endif]-->
 
     <title>Yang Gao's homepage</title>
-  </head>
+      <style>
+        body {
+                margin: 0 auto;
+                width: 300px;
+                height: 300px;
+            }
+             
+            div {
+                width: 200px;
+                height: 200px;
+              <!--  background: green;-->
+            }
+        </style>
+     </head>
 
 
 
