--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <style>
         body {
                 margin: 0 auto;
-                width: 300px;
-                height: 300px;
+                width: 1200px;
+                height: 900px;
             }
              
             div {
-                width: 200px;
-                height: 200px;
+                width: 800px;
+                height: 900px;
               <!--  background: green;-->
             }
         </style>
@@ -142,7 +142,7 @@
 <a href="https://www.gaoyangvr.github.io">[PDF]</a></div></div>
 </br></br>
 
-<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/ISMAR21-C.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/ISAMR21-C.jpg" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Analysis and Validation for Kinematic and Physiological Data of VR Training System</strong>.<br />
 Shuwei Chen, Ben Hu, <u>Yang Gao*<u>, Zhiping Liao, Yang Liu, Jianhua Li and Aimin Hao*.  <br />
  IEEE International Symposium on Mixed and Augmented Reality (ISMAR)- Adjunct, accept.
