--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
   <li>VR+ Physiological signal (EEG/EMG)</li>
 </ul>
 </li>
- 
-  <p><strong>Publications and Presentations</strong></p>
 
  <b>News</b></br>
 <div class="news">
@@ -123,8 +121,21 @@
   </table>
 
  <!--<h5><a href="/allnews.html">         <b>… See all news</b></a></h5>-->
-
 </div>
+</br></br>
+
+
+<p><strong>Publications and Presentations</strong></p>
+
+<span class="SI">[SI]</span> = <span class="SI">S</span>hape &amp; <span class="SI">I</span>mage
+      </div><div style="display: inline-block; margin:0 2em; line-height: 1.5;">
+        <span class="NI">[NI]</span> = <span class="NI">N</span>atural <span class="NI">I</span>nteraction
+      </div><div style="display: inline-block; margin:0 2em; line-height: 1.5;">
+        <span class="MI">[MI]</span> = <span class="MI">M</span>edical <span class="MI">I</span>maging
+      </div><div style="display: inline-block; margin:0 2em; line-height: 1.5;">
+        <b>[</b><span class="CA">*</span><b>]</b> = Corresponding Author
+
+</br></br>
 
 <b>2021</b></br>
 
@@ -177,7 +188,7 @@ Graphical Models, 109: 101061, 2020.
 
 <div> <a href="https://youtu.be/7QDI7qHfVJM"> <img src="./images/TVC18.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>An efficient FLIP and shape matching coupled method for fluid–solid and two-phase fluid simulations</strong>.<br />
-<u>Yang Gao<sup>*</sup></sup></u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao.  <br />
+<u>Yang Gao<sup>*</sup></u>, Shuai Li, Yinghao Xu, Hong Qin and Aimin Hao.  <br />
 The Visual Computer, 35: 1741–1753, 2019.<a href="./papers/TVC2019.pdf">[PDF]</a></div></div>
 </br></br>
 
