--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
               <!--  background: green;-->
             }
         </style>
+    
+    <style type="text/css">
+.FS, .VR, .RR{font-weight: bold;}
+.FS{color: #920808;}
+.VR{color: #027211;}
+.RR{color: #03439E;}
+.CA{font-family: "Courier New", Courier, monospace;}
+</style>
+    
      </head>
 
 
@@ -80,10 +89,11 @@
 
 <p><strong>Recent research interests:</strong></p>
 <ul>
-    <li> Physics-based fluid modelling/simulation </li>
-    <li> VR + Rehabilitation </li>
-  <li>Data-driven based 3D reconstruction </li>
+  <li> Physics-based fluid modelling/simulation </li>
   <li>VR+ Physiological signal (EEG/EMG)</li>
+  <li> VR + Rehabilitation </li>
+  <li>Realistic Rendering </li>
+  
 </ul>
 </li>
 
@@ -127,13 +137,6 @@
 
 <p><strong>Publications and Presentations</strong></p>
 
-<span class="SI">[SI]</span> = <span class="SI">S</span>hape &amp; <span class="SI">I</span>mage
-      </div><div style="display: inline-block; margin:0 2em; line-height: 1.5;">
-        <span class="NI">[NI]</span> = <span class="NI">N</span>atural <span class="NI">I</span>nteraction
-      </div><div style="display: inline-block; margin:0 2em; line-height: 1.5;">
-        <span class="MI">[MI]</span> = <span class="MI">M</span>edical <span class="MI">I</span>maging
-      </div><div style="display: inline-block; margin:0 2em; line-height: 1.5;">
-        <b>[</b><span class="CA">*</span><b>]</b> = Corresponding Author
 
 </br></br>
 
