--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
   <table>
     <tbody>
       <tr>
-        <td>      •    <em>2021/09</em>     </td>
-        <td>    I will serve as committee of IEEE VR 2023.</td>
+        <td>      •    <em>2023/09</em>     </td>
+        <td>    I will serve as a program committee of IEEE VR 2023.</td>
       </tr>
       <tr>
         <td>      •    <em>2022/06</em>     </td>
