--- a/index.html
+++ b/index.html
@@ -153,11 +153,19 @@
 </br></br>
 
 <b>2022</b></br>
+
 <div> <a href="https://www.gaoyangvr.github.io"><img src="./images/TVCG_LM2022.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
 <div><strong>Neurophysiological and Subjective Analysis of VR Emotion Induction Paradigm</strong>.<br />
  Ming Li; Junjun Pan; <u>Yang Gao*<u>; Yang Shen; Fang Luo; Ju Dai; Aimin Hao; Hong Qin.  <br />
  IEEE Transactions on Visualization and Computer Graphics.
 <a href="https://ieeexplore.ieee.org/abstract/document/9873987">[PDF]</a></div></div>
+</br></br>
+
+<div> <a href="https://www.gaoyangvr.github.io"><img src="./images/VR2022.png" style="width:260px;height:100px;margin-top:5px;margin-left:20px;float:left;"></a>
+<div><strong>Analysis of Emotional Tendency and Syntactic Properties of VR Game Reviews</strong>.<br />
+ <u>Yang Gao<u>, Anqi Chen, Susan Chi, Guangtao Zhang, Aimin Hao <br />
+ IEEE Transactions on Visualization and Computer Graphics.
+<a href="https://ieeexplore.ieee.org/abstract/document/9757537">[PDF]</a></div></div>
 </br></br>
 
 <b>2021</b></br>
